Working on banner section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Tailwind Customization -->
     <script>
         tailwind.config = {
             theme: {
@@ -16,13 +19,21 @@
             }
         }
     </script>
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
         rel="stylesheet">
+
+    <!-- Browser Fav-icon -->
     <link rel="shortcut icon" href="images/tea-icon.png" type="image/x-icon">
+
+    <!-- Font-Awesome -->
     <script src="https://kit.fontawesome.com/8f6dc4d4e3.js" crossorigin="anonymous"></script>
+
+    <!-- Fonts we used -->
     <style>
         .font-manrope {
             font-family: "Manrope", sans-serif;
@@ -37,8 +48,21 @@
 </head>
 
 <body>
-    <header>
-
+    <header class="font-manrope max-w-screen-xl border-2 border-red-500 mx-auto px-16 lg:px-28 ">
+        <div class="flex justify-between">
+            <!-- Text-content -->
+            <div>
+                <h1>It's good <br>
+                    tea time at The<br>
+                    Tea House
+                </h1>
+                <p>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button>Explorer More<i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div>
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
 
