--- a/index.html
+++ b/index.html
@@ -42,25 +42,37 @@
         .font-jakarta {
             font-family: "Plus Jakarta Sans", sans-serif;
         }
+
+        .color-1{
+            color: #1C1C1C;
+        }
+        .color-2{
+            color: #777777;
+        }
     </style>
 
     <title>Tea House</title>
 </head>
 
 <body>
-    <header class="font-manrope max-w-screen-xl border-2 border-red-500 mx-auto px-16 lg:px-28 ">
-        <div class="flex justify-between">
+    <header class="font-manrope max-w-screen-xl mx-auto">
+        <div class="flex justify-between gap-3.5 border-2">
             <!-- Text-content -->
-            <div>
-                <h1>It's good <br>
+            <div class="mt-20 border-2">
+                <h1 class="text-[80px] font-extrabold color-1">It's good <br>
                     tea time at The<br>
                     Tea House
                 </h1>
-                <p>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button>Explorer More<i class="fa-solid fa-arrow-right"></i></button>
+                <p class="text-lg color-2 font-medium mt-7">Tea and Botanical Solutions Supplier Give Optimum<br>Satisfaction To Your Taste Buds.</p>
+                <button class="text-xl p-4 rounded-lg bg-gradient-to-r from-[#FF8938] to-[#FF0000] font-bold text-white mt-7">Explorer More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
             </div>
+            <!-- Image Content -->
+            <div class="mt-40 border-2">
+                <img class="w-full" src="images/banner.png" alt="">
+            </div>
+            <!-- Card-content -->
             <div>
-                <img src="images/banner.png" alt="">
+
             </div>
         </div>
     </header>
