--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
             font-family: "Plus Jakarta Sans", sans-serif;
         }
 
-        .color-1{
+        .color-1 {
             color: #1C1C1C;
         }
-        .color-2{
+
+        .color-2 {
             color: #777777;
         }
     </style>
@@ -56,23 +57,36 @@
 
 <body>
     <header class="font-manrope max-w-screen-xl mx-auto">
-        <div class="flex justify-between gap-3.5 border-2">
+        <div class="flex justify-between gap-3.5">
             <!-- Text-content -->
-            <div class="mt-20 border-2">
+            <div class="mt-20">
                 <h1 class="text-[80px] font-extrabold color-1">It's good <br>
                     tea time at The<br>
                     Tea House
                 </h1>
-                <p class="text-lg color-2 font-medium mt-7">Tea and Botanical Solutions Supplier Give Optimum<br>Satisfaction To Your Taste Buds.</p>
-                <button class="text-xl p-4 rounded-lg bg-gradient-to-r from-[#FF8938] to-[#FF0000] font-bold text-white mt-7">Explorer More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+                <p class="text-lg color-2 font-medium mt-7">Tea and Botanical Solutions Supplier Give
+                    Optimum<br>Satisfaction To Your Taste Buds.</p>
+                <button
+                    class="text-xl p-4 rounded-lg bg-gradient-to-r from-[#FF8938] to-[#FF0000] font-bold text-white mt-7">Explorer
+                    More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
             </div>
-            <!-- Image Content -->
-            <div class="mt-40 border-2">
-                <img class="w-full" src="images/banner.png" alt="">
-            </div>
-            <!-- Card-content -->
-            <div>
-
+            <!-- Image-content -->
+            <div class="relative">
+                <div class="mt-40">
+                    <img class="w-full" src="images/banner.png" alt="">
+                </div>
+                <!-- Review-card-section -->
+                <div class="flex justify-between gap-5 items-center bg-white w-max rounded-lg drop-shadow-2xl p-5 absolute bottom-9 left-20">
+                    <!-- Review-icon -->
+                    <div>
+                        <i class="fa-solid fa-star text-4xl text-[#FFC850]"></i>
+                    </div>
+                    <!-- Review-description -->
+                    <div>
+                        <p class="text-3xl font-extrabold color-1">5.00</p>
+                        <p class="text-base font-semibold color-2">Trust Pilot Ratings</p>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
