Banner section responsive

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 </head>
 
 <body>
-    <header class="font-manrope max-w-screen-xl mx-auto">
-        <div class="flex justify-between gap-3.5">
+    <header class="font-manrope max-w-screen-xl mx-auto px-2.5">
+        <div class="lg:flex justify-between gap-3.5">
             <!-- Text-content -->
-            <div class="mt-20">
+            <div class="lg:mt-20">
                 <h1 class="text-[80px] font-extrabold color-1">It's good <br>
                     tea time at The<br>
                     Tea House
@@ -76,7 +76,8 @@
                     <img class="w-full" src="images/banner.png" alt="">
                 </div>
                 <!-- Review-card-section -->
-                <div class="flex justify-between gap-5 items-center bg-white w-max rounded-lg drop-shadow-2xl p-5 absolute bottom-9 left-20">
+                <div
+                    class="flex justify-between gap-5 items-center bg-white w-max rounded-lg drop-shadow-2xl p-5 absolute bottom-5 left-10 lg:bottom-9 lg:left-20 ">
                     <!-- Review-icon -->
                     <div>
                         <i class="fa-solid fa-star text-4xl text-[#FFC850]"></i>
