--- a/index.html
+++ b/index.html
@@ -92,7 +92,42 @@
         </div>
     </header>
     <main>
-
+        <!-- Featured-section -->
+        <section class="font-manrope max-w-screen-xl mx-auto px-2.5 mt-20 mb-20">
+            <!-- Featured-section-head -->
+            <div class="text-center w-3/4 mx-auto">
+                <h1 class="text-5xl font-extrabold color-1">Our Featured Products</h1>
+                <p class="text-base font-medium color-2 mt-7">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
+            <div class="lg:flex justify-center items-center gap-6 ">
+                <div
+                    class="w-max text-center bg-gradient-to-t from-[#F4F4F4] to-[#F4F4F4] px-16 pt-7 rounded-lg drop-shadow-lg mt-12">
+                    <img class="mx-auto" src="images/tea-1.png" alt="">
+                    <h1 class="mt-7 text-2xl font-extrabold color-1">Milk Tea</h1>
+                    <p class="mt-3.5 color-2 font-semibold mb-9">Creamer could be<br>replaced by fresh milk</p>
+                </div>
+                <div
+                    class="w-max text-center bg-gradient-to-t from-[#F4F4F4] to-[#F4F4F4] px-16 pt-7 rounded-lg drop-shadow-lg mt-12">
+                    <img class="mx-auto" src="images/tea-2.png" alt="">
+                    <h1 class="mt-7 text-2xl font-extrabold color-1">Milk Tea</h1>
+                    <p class="mt-3.5 color-2 font-semibold mb-9">Creamer could be<br>replaced by fresh milk</p>
+                </div>
+                <div
+                    class="w-max text-center bg-gradient-to-t from-[#F4F4F4] to-[#F4F4F4] px-16 pt-7 rounded-lg drop-shadow-lg mt-12">
+                    <img class="mx-auto" src="images/tea-3.png" alt="">
+                    <h1 class="mt-7 text-2xl font-extrabold color-1">Milk Tea</h1>
+                    <p class="mt-3.5 color-2 font-semibold mb-9">Creamer could be<br>replaced by fresh milk</p>
+                </div>
+                <div
+                    class="w-max text-center bg-gradient-to-t from-[#F4F4F4] to-[#F4F4F4] px-16 pt-7 rounded-lg drop-shadow-lg mt-12">
+                    <img class="mx-auto" src="images/tea-4.png" alt="">
+                    <h1 class="mt-7 text-2xl font-extrabold color-1">Milk Tea</h1>
+                    <p class="mt-3.5 color-2 font-semibold mb-9">Creamer could be<br>replaced by fresh milk</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
