Fresh tea section design

--- a/index.html
+++ b/index.html
@@ -128,6 +128,45 @@
                 </div>
             </div>
         </section>
+        <!-- Fresh-tea-section -->
+        <section class="font-manrope max-w-screen-xl mx-auto px-2.5 mt-20 mb-20">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <!-- Grid-section -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+                    <div class="h-38 bg-gradient-to-l from-red-50 to-red-100 rounded-xl"></div>
+                    <div class="bg-orange-50 rounded-xl row-span-2">
+                        <img class="mx-auto mt-14 mb-8" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-green-50 rounded-xl row-span-2">
+                        <img class="mx-auto mt-14 mb-8" src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="bg-gradient-to-r from-gray-200 to-gray-50 rounded-xl"></div>
+                </div>
+                <!--Text-section -->
+                <div>
+                    <h1 class="text-4xl font-extrabold color-1">Great Tea, Freshly
+                        <br>Presented
+                    </h1>
+                    <p class="font-medium color-2 mt-8">The meaning of gong cha is chanese is to provide the best tea to
+                        emperor from all possessions .
+                        It
+                        represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                        deeply
+                        appreciated by its custoers because of good words of mouth and unique customized service
+                        orginated
+                        from Taiwan.</p>
+                    <h3 class="text-xl font-extrabold color-1 mt-8">Unique Taste</h3>
+                    <p class="color-2 font-medium mt-3.5">A Unique and different style from other teapots gives a
+                        luxurious and minimalist impression</p>
+                    <h3 class="text-xl font-extrabold color-1 mt-8">Premium Quality</h3>
+                    <p class="color-2 mt-3.5">Premium Quality that makes tea more elegant and more durable when you use
+                        it.</p>
+                </div>
+            </div>
+        </section>
+        <section>
+
+        </section>
     </main>
     <footer>
 
