--- a/index.html
+++ b/index.html
@@ -164,8 +164,26 @@
                 </div>
             </div>
         </section>
-        <section>
+        <!-- Review-section -->
+        <section class="font-manrope max-w-screen-xl mx-auto mt-20 mb-20">
+            <div
+                class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
+                <!-- Text-section -->
+                <div class="w-5/6 mt-36 mb-36">
+                    <h1 class="text-5xl font-extrabold">Meet Our Super
+                        <br>Clients
+                    </h1>
+                    <p class="font-medium mt-8">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. </p>
+                    <button class="text-xl font-bold bg-white text-orange- p-3 rounded-lg mt-8">Show All</button>
+                </div>
+                <!-- Review-card-section -->
+                <div>
 
+                </div>
+            </div>
         </section>
     </main>
     <footer>
