review card design

--- a/index.html
+++ b/index.html
@@ -177,11 +177,20 @@
                         majority have suffered
                         alteration in some form, by injected humour, or randomised words which don't look even slightly
                         believable. </p>
-                    <button class="text-xl font-bold bg-white text-orange- p-3 rounded-lg mt-8">Show All</button>
+                    <button class="text-xl font-bold bg-white text-orange-700 p-3 rounded-lg mt-8">Show All</button>
                 </div>
                 <!-- Review-card-section -->
-                <div>
-
+                <div class="relative py-24">
+                    <!-- Top-card -->
+                    <div class="relative h-56 bg-white rounded-xl w-full md:3/4 mt-24">
+                        <div class="absolute -top-7 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <div class="p-12">
+                            <p class="color-2">We are providing the best and suitable home insurance services for the people who are
+                                interested to treatment</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
