--- a/index.html
+++ b/index.html
@@ -169,28 +169,59 @@
             <div
                 class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
                 <!-- Text-section -->
-                <div class="w-5/6 mt-36 mb-36">
-                    <h1 class="text-5xl font-extrabold">Meet Our Super
-                        <br>Clients
-                    </h1>
-                    <p class="font-medium mt-8">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered
-                        alteration in some form, by injected humour, or randomised words which don't look even slightly
-                        believable. </p>
-                    <button class="text-xl font-bold bg-white text-orange-700 p-3 rounded-lg mt-8">Show All</button>
+                <div class="flex justify-center items-center">
+                    <div class="w-5/6">
+                        <h1 class="text-5xl font-extrabold">Meet Our Super
+                            <br>Clients
+                        </h1>
+                        <p class="font-medium mt-8">There are many variations of passages of Lorem Ipsum available, but
+                            the
+                            majority have suffered
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                            slightly
+                            believable. </p>
+                        <button class="text-xl font-bold bg-white text-orange-700 p-3 rounded-lg mt-8">Show All</button>
+                    </div>
                 </div>
                 <!-- Review-card-section -->
                 <div class="relative py-24">
                     <!-- Top-card -->
-                    <div class="relative h-56 bg-white rounded-xl w-full md:3/4 mt-24">
+                    <div class="relative h-56 bg-white rounded-xl w-full md:w-3/4 mt-10 opacity-40 left-40">
+                        <div class="absolute -top-7 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <div class="p-12">
+                            <p class="color-2">We are providing the best and suitable home insurance services for the
+                                people who are
+                                interested to treatment</p>
+                            <h1 class="font-bold color-1 mt-5">Ilham Yuda</h1>
+                            <p class="font-medium color-2">Businessman</p>
+                        </div>
+                    </div>
+                    <!-- Bottom-card -->
+                    <div class="relative h-56 bg-white rounded-xl w-full md:w-3/4 mt-10 opacity-40 left-40">
+                        <div class="absolute -top-7 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <div class="p-12">
+                            <p class="color-2">We are providing the best and suitable home insurance services for the
+                                people who are
+                                interested to treatment</p>
+                            <h1 class="font-bold color-1 mt-5">Ilham Yuda</h1>
+                            <p class="font-medium color-2">Businessman</p>
+                        </div>
+                    </div>
+                    <!-- <div class="relative h-56 bg-white rounded-xl w-full md:3/4 -top-96 -left-20">
                         <div class="absolute -top-7 -left-5 bg-white rounded-full">
                             <img class="p-1" src="images/client.png" alt="">
                         </div>
                         <div class="p-12">
                             <p class="color-2">We are providing the best and suitable home insurance services for the people who are
                                 interested to treatment</p>
+                            <h1 class="font-bold color-1 mt-5">Ilham Yuda</h1>
+                            <p class="font-medium color-2">Businessman</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
