Review section complete

--- a/index.html
+++ b/index.html
@@ -185,8 +185,24 @@
                 </div>
                 <!-- Review-card-section -->
                 <div class="relative py-24">
+                    <!-- Middle-card -->
+                    <div class="absolute z-10 top-52">
+                        <div class="relative h-56 bg-white rounded-xl w-full md:w-3/4 mt-10">
+                            <div class="absolute -top-7 -left-5 bg-white rounded-full">
+                                <img class="p-1" src="images/client.png" alt="">
+                            </div>
+                            <div class="p-12">
+                                <p class="color-2">We are providing the best and suitable home insurance services for
+                                    the
+                                    people who are
+                                    interested to treatment</p>
+                                <h1 class="font-bold color-1 mt-5">Ilham Yuda</h1>
+                                <p class="font-medium color-2">Businessman</p>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Top-card -->
-                    <div class="relative h-56 bg-white rounded-xl w-full md:w-3/4 mt-10 opacity-40 left-40">
+                    <div class="relative h-56 bg-white rounded-xl w-full md:w-3/4 mt-10 opacity-40 left-8 md:left-40">
                         <div class="absolute -top-7 -left-5 bg-white rounded-full">
                             <img class="p-1" src="images/client.png" alt="">
                         </div>
@@ -199,7 +215,7 @@
                         </div>
                     </div>
                     <!-- Bottom-card -->
-                    <div class="relative h-56 bg-white rounded-xl w-full md:w-3/4 mt-10 opacity-40 left-40">
+                    <div class="relative h-56 bg-white rounded-xl w-full md:w-3/4 mt-10 opacity-40 left-8 md:left-40">
                         <div class="absolute -top-7 -left-5 bg-white rounded-full">
                             <img class="p-1" src="images/client.png" alt="">
                         </div>
@@ -211,17 +227,6 @@
                             <p class="font-medium color-2">Businessman</p>
                         </div>
                     </div>
-                    <!-- <div class="relative h-56 bg-white rounded-xl w-full md:3/4 -top-96 -left-20">
-                        <div class="absolute -top-7 -left-5 bg-white rounded-full">
-                            <img class="p-1" src="images/client.png" alt="">
-                        </div>
-                        <div class="p-12">
-                            <p class="color-2">We are providing the best and suitable home insurance services for the people who are
-                                interested to treatment</p>
-                            <h1 class="font-bold color-1 mt-5">Ilham Yuda</h1>
-                            <p class="font-medium color-2">Businessman</p>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </section>
