News and Event section complete

--- a/index.html
+++ b/index.html
@@ -230,6 +230,42 @@
                 </div>
             </div>
         </section>
+        <!-- News-and-event-section -->
+        <section class="font-manrope max-w-screen-xl mx-auto mt-20 mb-20">
+            <div class="text-center w-5/6 mx-auto">
+                <h1 class="text-5xl font-extrabold color-1">News & Events</h1>
+                <p class="color-2 font-medium">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. </p>
+            </div>
+            <div class="pt-12 md:flex justify-center gap-8">
+                <div class="border-2 w-max p-5 rounded-lg">
+                    <img src="images/news-1.png" alt="">
+                    <p class="color-2 font-medium pt-5">Feb 05, 2027</p>
+                    <h1 class="color-1 text-xl font-extrabold pt-2">Collecting 8 points for <br> discount</h1>
+                    <p class="font-medium color-2 pt-4">There are many variations of passages<br>of Lorem Ipsum
+                        available.</p>
+                    <h3 class="color-1 font-bold pt-2">Learn More</h3>
+                </div>
+                <div class="border-2 w-max p-5 rounded-lg">
+                    <img src="images/news-2.png" alt="">
+                    <p class="color-2 font-medium pt-5">Feb 05, 2027</p>
+                    <h1 class="color-1 text-xl font-extrabold pt-2">Collecting 8 points for <br> discount</h1>
+                    <p class="font-medium color-2 pt-4">There are many variations of passages<br>of Lorem Ipsum
+                        available.</p>
+                    <h3 class="color-1 font-bold pt-2">Learn More</h3>
+                </div>
+                <div class="border-2 w-max p-5 rounded-lg">
+                    <img src="images/news-3.png" alt="">
+                    <p class="color-2 font-medium pt-5">Feb 05, 2027</p>
+                    <h1 class="color-1 text-xl font-extrabold pt-2">Collecting 8 points for <br> discount</h1>
+                    <p class="font-medium color-2 pt-4">There are many variations of passages<br>of Lorem Ipsum
+                        available.</p>
+                    <h3 class="color-1 font-bold pt-2">Learn More</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
