Working on footer section

--- a/index.html
+++ b/index.html
@@ -267,8 +267,44 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="bg-gradient-to-r from-red-50 to-red-100 py-36">
+        <div class="max-w-screen-xl mx-auto  flex justify-between">
+            <!-- Logo -->
+            <div>
+                <img src="images/cup.png" alt="">
+            </div>
+            <div class="flex justify-center items-center gap-10">
+                <div>
+                    <p class="text-xl font-medium color-2">Ready to get strated?</p>
+                </div>
+                <div>
+                    <button
+                        class="bg-gradient-to-r from-orange-300 to-red-500 text-white text-xl font-bold p-3 rounded-lg">Get
+                        Started</button>
+                </div>
+            </div>
+        </div>
+        <div class="max-w-screen-xl mx-auto">
+            <div>
+                <h1>Quick Links</h1>
+                <p>Home</p>
+                <p>About Us</p>
+                <p>Insurance</p>
+                <p>Privacy Policy</p>
+            </div>
+            <div>
+                <h1>Our Service</h1>
+                <p>Life Insurance</p>
+                <p>Car Insurance</p>
+                <p>Health Insurance</p>
+                <p>House Insurance</p>
+            </div>
+            <div>
+                <h1>Help</h1>
+                <p>FAQs</p>
+                <p>Contact Us</p>
+            </div>
+        </div>
     </footer>
 
 </body>
