Footer section complete

--- a/index.html
+++ b/index.html
@@ -284,27 +284,59 @@
                 </div>
             </div>
         </div>
-        <div class="max-w-screen-xl mx-auto">
-            <div>
-                <h1>Quick Links</h1>
-                <p>Home</p>
-                <p>About Us</p>
-                <p>Insurance</p>
-                <p>Privacy Policy</p>
+        <div class="max-w-screen-xl mx-auto mt-10">
+            <div class="grid grid-cols-4 mt-24">
+                <!-- First column -->
+                <div>
+                    <h1 class="text-xl font-semibold
+                ">Quick Links</h1>
+                    <ul class="color-2 mt-6">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Insurance</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- Second column -->
+                <div>
+                    <h1 class="text-xl font-semibold">Our Service</h1>
+                    <ul class="color-2 mt-6">
+                        <li><a href="">Life Insurance</a></li>
+                        <li><a href="">Car Insurance</a></li>
+                        <li><a href=""></a>Health Insurance</li>
+                        <li><a href="">House Insurance</a></li>
+                    </ul>
+                </div>
+                <!-- Third column -->
+                <div>
+                    <h1 class="text-xl font-semibold">Help</h1>
+                    <ul class="color-2 mt-6">
+                        <li><a href="">FAQs</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </div>
+                <!-- Fourth column -->
+                <div>
+                    <h1 class="text-xl font-semibold">Subscribe to our<br>newsletter</h1>
+                    <div class="flex flex-col space-y-2">
+                        <div>
+                            <input class="bg-transparent border-b-2 border-black w-4/6" type="email"
+                                placeholder="Email address">
+                            <i
+                                class="fa-solid fa-chevron-right w-7 h-7 bg-gradient-to-r from-orange-300 to-red-500 rounded-full text-white inline-flex justify-center items-center"></i>
+                            <div class="flex w-3/4 mb-2 mt-8 gap-4">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <div>
-                <h1>Our Service</h1>
-                <p>Life Insurance</p>
-                <p>Car Insurance</p>
-                <p>Health Insurance</p>
-                <p>House Insurance</p>
+            <div class="text-center mt-28">
+                <p class="text-xl font-bold">© 2027 UIDesign.to - All rights reserved.</p>
             </div>
-            <div>
-                <h1>Help</h1>
-                <p>FAQs</p>
-                <p>Contact Us</p>
-            </div>
-        </div>
     </footer>
 
 </body>
